--- a/food_randomizer/android/app/src/main/AndroidManifest.xml
+++ b/food_randomizer/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="com.reven9.random"
-android:versionCode="1.2"
-android:versionName="1.3.3">
+package="com.reven9.random">
 <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
 <uses-permission android:name="android.permission.INTERNET" />
 <queries>
